@@ -60,3 +60,7 @@ A.menu:hover {
    line-height: 12pt;
    border-style: outset;
 }
+
+label {
+    cursor: hand;
+}
